@startuml
package es.urjc.mastermind.models{

    class MasterMind
    class Board
    class Turn
    class Player
    class MakerPlayer
    class BreakerPlayer
    class Combination
    class ProposedCombination
    class SecretCombination
    class Result
    enum Color
    enum Error
}

Player <|-- MakerPlayer
Player <|-- BreakerPlayer

Combination <|--- SecretCombination
Combination <|--- ProposedCombination

MasterMind *--> Board
MasterMind *--> Turn
Turn *--> Player
Combination *--> Color
Player *--> Board
BreakerPlayer *--> SecretCombination
MakerPlayer o--> ProposedCombination
Board *--> Result
Board *--> SecretCombination
Board *--> ProposedCombination
Result *--> ProposedCombination
ProposedCombination ..> Error
@enduml